--- a/index.html
+++ b/index.html
@@ -13,10 +13,27 @@
 
     <body>
         <header>
-            <div class=>
+            <div class= "logo">
                 <h1><img src="imagenes_Chanllenge/Vector.svg"></h1>
             </div>
         </header>
+        <content>
+            <div>
+                form
+                <textarea name="textarea" rows="2" cols="40">Ingresa en texto aquí</textarea>
+                <p>><span class="..."></span>Solo letras minúsculas y sin acentos</p>
+                <input type="button" value="Encriptar">
+                <input type="button" value="Desencriptar">
+            </div>
 
+            <div>
+                resultado
+               <img src="imagenes_Chanllenge/Muñeco.png">
+
+                <textarea name="textarea" rows="2" cols="40">Ningun mensaje fue encontrado</textarea>
+                <label for="ingreseTexto">Ingrese el texto que desee encriptar o desencriptar</label>
+                
+        </content>
     </body>
+   
 <html>
