--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                     <textarea class="noEncontrado" id="noEncontrado" name="textarea" rows="2">Ningún mensaje fue encontrado</textarea>
                     <p class="inserteCifrado">Ingrese el texto que desee encriptar o desencriptar</p>
-                    <input onclick="clickCopiar()" class="btn btn-copiar" type="button" value="copiar">
+                    <input id = "copiar" onclick="clickCopiar()" class="btn btn-copiar" type="button" value="copiar">
                 </div>
             </section>
         </content>
