--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                          
                     </div>
 
-                    <div>
+                    <div class="botones">
                         <input onclick="clickEncriptar()" class="btn btn-azulOscuro" type="button" value="Encriptar">
                         <input onclick="clickDesencriptar()" class="btn btn-claro" type="button" value="Desencriptar">
                     </div>
